# indexer-tx-watcher-example

./: Cargo.toml  README.md
.github/workflows/: test.yaml
src/: configs.rs  main.rs
